[package]
name = "p2pChat"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
libp2p = { version = "0.54.1", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "kad",
] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
colored = "2.0"
libp2p-request-response = { version = "0.27.0", features = ["cbor"] }
